[project]
name = "foxglove-schemas-flatbuffer"
version = "0.3.0"
description = "Precompiled flatbuffer schemas for Foxglove"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = ["flatbuffers (>=23.0)"]

[project.urls]
repository = "https://github.com/foxglove/foxglove-sdk"
documentation = "https://docs.foxglove.dev/"

[dependency-groups]
dev = ["pytest>=8.3.4,<9"]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
source-include = ["tests/**"]

[tool.pytest.ini_options]
addopts = "-vv --color=yes"
log_cli = true
xfail_strict = true
