[package]
name = "foxglove-sdk-python"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "foxglove_py"
crate-type = ["cdylib"]

# Exactly one of `aws-lc-rs` or `ring` must be enabled to select the rustls crypto
# backend used by `remote-access`. `aws-lc-rs` is the default; `ring` exists as an
# escape hatch for targets where building aws-lc-sys is painful. The two are
# mutually exclusive: enabling both is a compile error in foxglove. To use `ring`,
# set `--no-default-features` and select it explicitly.
[features]
default = ["aws-lc-rs"]
remote-access = ["foxglove/remote-access"]
aws-lc-rs = ["foxglove/aws-lc-rs"]
ring = ["foxglove/ring"]
# Opts into a build-time check that NVENC hardware acceleration for video
# encoding will be available. Only meaningful in combination with
# `remote-access`. See foxglove crate docs for details.
require-cuda = ["foxglove/require-cuda"]

# The full set of supported features, with opinionated choices for mutually-
# exclusive feature sets.
full = ["aws-lc-rs", "remote-access"]

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
bytes.workspace = true
log.workspace = true
pyo3 = { version = "0.29.0", features = ["abi3-py310"] }
pyo3-log = "0.13.4"
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
foxglove = { path = "../../rust/foxglove", default-features = false, features = ["lz4", "zstd"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio.workspace = true
foxglove = { path = "../../rust/foxglove", default-features = false, features = [
  "lz4",
  "sysinfo",
  "websocket",
  "zstd",
] }
