[package]
name = "foxglove_derive"
description = "Foxglove SDK derive macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "3.0", features = ["full"] }

[dev-dependencies]
bytes = "1.4"
chrono = "0.4"
foxglove = { path = "../foxglove", features = ["chrono"] }
prost.workspace = true
prost-reflect = "0.16.3"
prost-types.workspace = true
tracing.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
