[package]
name = "remote_access_tests"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
foxglove = { path = "../foxglove", features = ["remote-access", "_protocol"] }
livekit = { version = "0.7.36", features = ["rustls-tls-native-roots"] }
livekit-api = { version = "0.4", default-features = false, features = ["access-token"] }
axum = "0.8"
reqwest = { version = "0.13", features = ["json"] }
tokio.workspace = true
serde.workspace = true
serde_json = "1.0"
anyhow = "1"
tracing.workspace = true
futures-util = "0.3"
dotenvy = "0.15"

[dev-dependencies]
serial_test = "3"
tracing-test.workspace = true

[lints]
workspace = true
