[package]
name = "remote_access_tests"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
require-cuda = ["foxglove/require-cuda"]

[dependencies]
foxglove = { path = "../foxglove", features = ["remote-access", "_protocol"] }
livekit = { workspace = true }
livekit-api = { workspace = true }
axum = "0.8"
reqwest = { workspace = true, features = ["http2", "json", "rustls", "system-proxy"] }
tokio.workspace = true
serde.workspace = true
serde_json = "1.0"
anyhow = "1"
tracing.workspace = true
futures-util = "0.3"
dotenvy = "0.15"

[dev-dependencies]
serial_test = "3"
tracing-test.workspace = true

[lints]
workspace = true
