[package]
name = "remote_data_loader_backend_conformance"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
foxglove = { path = "../foxglove", features = ["remote_data_loader_backend"] }
jsonschema = { version = "0.42", default-features = false }
libtest-mimic = "0.8"
mcap.workspace = true
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json"] }
serde_json = "1.0"
