[package]
name = "remote_data_loader_backend_conformance"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
foxglove = { path = "../foxglove", features = ["remote_data_loader_backend"] }
jsonschema = { version = "0.42", default-features = false }
libtest-mimic = "0.8"
mcap.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json = "1.0"
